update controllers tu use serializers
